# feamgan

./: .gitignore  README.md  pyproject.toml
feamgan/: LoggerNames.py  controllerConfig.json  experimentSchedule.json  main.py
feamgan/ConfigInput_Component/: ConfigProvider.py
feamgan/Controller_Component/: Controller.py
feamgan/Experiment_Component/: AModelSuit.py  ExperimentScheduler.py  IExperiment.py  ITrainer.py
feamgan/Experiment_Component/Experiments/: InferenceExperiment.py  TrainModelsExperiment.py  experimentFunctions.py
feamgan/Experiment_Component/Metrics/: BaseIDMetric.py  CkvdMetric.py  CskidMetric.py  FidMetric.py  KidMetric.py  SkvdMetric.py
feamgan/Experiment_Component/Models/: BaseModel.py  BaseNetwork.py  FeaMGAN.py
feamgan/Experiment_Component/Models/Blocks/: FADEResnetBlock.py  StreamResnetBlock.py
feamgan/Experiment_Component/Trainer/: ATrainer.py
feamgan/Input_Component/: inputUtils.py
feamgan/Input_Component/DataPipelines/: daliPipelines.py
feamgan/Logger_Component/: SLoggerHandler.py
feamgan/Logger_Component/Logger/: Logger.py
feamgan/datasetPreperation/: convertSegmentations.py  createBDDSubsets.py  createDatasetSubsetSubset.py  createMSegSegmentations.py  downloadAndExtractCityscapes.py  extractBDD.py  extractPFD.py  extractVIPER.py
feamgan/datasetPreperation/utils/: datasetUtils.py
feamgan/eval/: convertPFDResults.py  cropSizeAblationPlot.ipynb  kvdEval.py  quickEval.py  randomlySampleResults.py  results2csv.py
feamgan/utils/: TSingleton.py  distUtils.py  semanticSegmentationUtils.py  visualizationUtils.py
(+14 files in other folders)
