[project]
name = "feamgan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvidia-dali-cuda120>=1.49.0",
    "termcolor>=3.1.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
tracking = [
    "wandb>=0.19.11",
]
